# SLICOT-Reference

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src_aux/: CMakeLists.txt
