set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/modules)

# Source files
set(SLICOT_SOURCE ${SLICOT_SOURCE}
    AB01MD.f AB01ND.f AB01OD.f AB04MD.f AB05MD.f AB05ND.f AB05OD.f
    AB05PD.f AB05QD.f AB05RD.f AB05SD.f AB07MD.f AB07ND.f AB08MD.f
    AB08MZ.f AB08ND.f AB08NW.f AB08NX.f AB08NY.f AB08NZ.f AB09AD.f
    AB09AX.f AB09BD.f AB09BX.f AB09CD.f AB09CX.f AB09DD.f AB09ED.f
    AB09FD.f AB09GD.f AB09HD.f AB09HX.f AB09HY.f AB09ID.f AB09IX.f
    AB09IY.f AB09JD.f AB09JV.f AB09JW.f AB09JX.f AB09KD.f AB09KX.f
    AB09MD.f AB09ND.f AB13AD.f AB13AX.f AB13BD.f AB13CD.f AB13DD.f
    AB13DX.f AB13ED.f AB13FD.f AB13ID.f AB13MD.f AB8NXZ.f AG07BD.f
    AG08BD.f AG08BY.f AG08BZ.f AG8BYZ.f
    BB01AD.f BB02AD.f BB03AD.f BB04AD.f BD01AD.f BD02AD.f
    DE01OD.f DE01PD.f delctg.f DF01MD.f DG01MD.f DG01ND.f DG01NY.f
    DG01OD.f DK01MD.f
    FB01QD.f FB01RD.f FB01SD.f FB01TD.f FB01VD.f FD01AD.f
    IB01AD.f IB01BD.f IB01CD.f IB01MD.f IB01MY.f IB01ND.f IB01OD.f
    IB01OY.f IB01PD.f IB01PX.f IB01PY.f IB01QD.f IB01RD.f IB03AD.f
    IB03BD.f
    MA01AD.f MA01BD.f MA01BZ.f MA01CD.f MA02AD.f MA02AZ.f MA02BD.f
    MA02BZ.f MA02CD.f MA02CZ.f MA02DD.f MA02ED.f MA02ES.f MA02EZ.f
    MA02FD.f MA02GD.f MA02GZ.f MA02HD.f MA02HZ.f MA02ID.f MA02IZ.f
    MA02JD.f MA02JZ.f MA02MD.f MA02MZ.f MA02NZ.f MA02OD.f MA02OZ.f
    MA02PD.f MA02PZ.f MB01KD.f MB01LD.f MB01MD.f MB01ND.f MB01OC.f
    MB01OD.f MB01OE.f MB01OH.f MB01OO.f MB01OS.f MB01OT.f MB01PD.f
    MB01QD.f MB01RB.f MB01RD.f MB01RH.f MB01RT.f MB01RU.f MB01RW.f
    MB01RX.f MB01RY.f MB01SD.f MB01SS.f MB01TD.f MB01UD.f MB01UW.f
    MB01UX.f MB01UY.f MB01UZ.f MB01VD.f MB01WD.f MB01XD.f MB01XY.f
    MB01YD.f MB01ZD.f MB02CD.f MB02CU.f MB02CV.f MB02CX.f MB02CY.f
    MB02DD.f MB02ED.f MB02FD.f MB02GD.f MB02HD.f MB02ID.f MB02JD.f
    MB02JX.f MB02KD.f MB02MD.f MB02ND.f MB02NY.f MB02OD.f MB02PD.f
    MB02QD.f MB02QY.f MB02RD.f MB02RZ.f MB02SD.f MB02SZ.f MB02TD.f
    MB02TZ.f MB02UD.f MB02UU.f MB02UV.f MB02UW.f MB02VD.f MB02WD.f
    MB02XD.f MB02YD.f MB03AB.f MB03AD.f MB03AE.f MB03AF.f MB03AG.f
    MB03AH.f MB03AI.f MB03BA.f MB03BB.f MB03BC.f MB03BD.f MB03BE.f
    MB03BF.f MB03BG.f MB03BZ.f MB03CD.f MB03CZ.f MB03DD.f MB03DZ.f
    MB03ED.f MB03FD.f MB03FZ.f MB03GD.f MB03GZ.f MB03HD.f MB03HZ.f
    MB03ID.f MB03IZ.f MB03JD.f MB03JP.f MB03JZ.f MB03KA.f MB03KB.f
    MB03KC.f MB03KD.f MB03KE.f MB03LD.f MB03LF.f MB03LP.f MB03LZ.f
    MB03MD.f MB03MY.f MB03ND.f MB03NY.f MB03OD.f MB03OY.f MB03PD.f
    MB03PY.f MB03QD.f MB03QG.f MB03QV.f MB03QW.f MB03QX.f MB03QY.f
    MB03RD.f MB03RW.f MB03RX.f MB03RY.f MB03RZ.f MB03SD.f MB03TD.f
    MB03TS.f MB03UD.f MB03VD.f MB03VW.f MB03VY.f MB03WA.f MB03WD.f
    MB03WX.f MB03XD.f MB03XP.f MB03XS.f MB03XU.f MB03XZ.f MB03YA.f
    MB03YD.f MB03YT.f MB03ZA.f MB03ZD.f MB04AD.f MB04AZ.f MB04BD.f
    MB04BP.f MB04BZ.f MB04CD.f MB04DB.f MB04DD.f MB04DI.f MB04DL.f
    MB04DP.f MB04DS.f MB04DY.f MB04DZ.f MB04ED.f MB04FD.f MB04FP.f
    MB04GD.f MB04HD.f MB04ID.f MB04IY.f MB04IZ.f MB04JD.f MB04KD.f
    MB04LD.f MB04MD.f MB04ND.f MB04NY.f MB04OD.f MB04OW.f MB04OX.f
    MB04OY.f MB04PA.f MB04PB.f MB04PU.f MB04PY.f MB04QB.f MB04QC.f
    MB04QF.f MB04QS.f MB04QU.f MB04RB.f
    MB04RU.f MB04SU.f MB04TB.f MB04TS.f
    #MB04RD.f MB04RS.f MB04RT.f MB04RV.f MB04RW.f MB04RZ.f # <----- missing
)

# Build the primary SLICOT subroutine library
add_library(slicot ${SLICOT_SOURCE} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
set_target_properties(slicot PROPERTIES LINKER_LANGUAGE Fortran)
